# bolna

./: .env.sample  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  AGENT_TYPES.md  API.md  Dockerfile  README.md  SUB_ACCOUNTS.md  docker-compose.yml  pyproject.toml  repro_response_in_pipeline.py  requirements.txt
.github/: FUNDING.yml  funding.json
.github/workflows/: auto-release.yml  lint.yml  publish-docker-images.yml  publish.yml  security.yml
app/: config.py  dependencies.py  main.py
app/middleware/: rate_limiter.py
app/routers/: accounts.py  agents.py  calls.py  campaigns.py  contacts.py  countries.py  health.py  knowledgebase.py  phone_numbers.py  regulatory.py  tools.py  transfers.py  webhooks.py  websockets.py
apps/backend/: package-lock.json  package.json  tsconfig.json
apps/frontend/: next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
bolna/: __init__.py  assistant.py  constants.py  enums.py  exceptions.py  models.py  prompts.py  providers.py
bolna/agent_manager/: __init__.py  assistant_manager.py  interruption_manager.py  llm_pipeline.py  models.py  setup_factories.py  synthesizer_pipeline.py  task_manager.py  voicemail_handler.py
bolna/agent_types/: __init__.py  contextual_conversational_agent.py  extraction_agent.py  graph_agent.py  graph_based_conversational_agent.py  knowledge_agent.py  knowledgebase_agent.py  llama_index_rag_agent.py  rag_enhanced_agent.py  summarization_agent.py  webhook_agent.py
bolna/enums/: __init__.py  constants.py  models.py  providers.py  tasks.py
bolna/helpers/: agent_state.py  aiohttp_session.py  ambient_noise_mixer.py  analytics_helpers.py  async_utils.py  audio_mixer.py  audio_utils.py  conversation_history.py  dtmf_manager.py  expression_evaluator.py  function_calling_helpers.py  httpx_client_pool.py  language_detector.py  language_switcher.py  logger_config.py  mark_event_meta_data.py  observable_variable.py  rag_service_client.py  ssl_context.py  ssml_config.py  url_security.py  utils.py
bolna/input_handlers/: __init__.py  daily_webcall.py  default.py  telephony.py
bolna/integrations/: __init__.py  base.py  runner.py  slack.py
bolna/lid/: __init__.py  azure.py  base.py  elevenlabs.py  elevenlabs_scribe.py  provider.py  sarvam.py  soniox.py
bolna/llms/: __init__.py  azure_llm.py  format_adapter.py  gemini_llm.py  http_client_pool.py  litellm.py  llm.py  message_models.py  openai_base.py  openai_llm.py  openai_realtime_llm.py  tool_call_accumulator.py  types.py
bolna/models/: __init__.py  agents.py  providers.py  rag.py  tasks.py
bolna/output_handlers/: __init__.py  daily_webcall.py  default.py  telephony.py
bolna/s2s/: __init__.py  base_s2s.py  events.py  openai_realtime_s2s.py
bolna/synthesizer/: __init__.py  azure_synthesizer.py  base_synthesizer.py  camb_synthesizer.py  cartesia_synthesizer.py  deepgram_synthesizer.py  elevenlabs_synthesizer.py  gemini_synthesizer.py  inworld_synthesizer.py  openai_synthesizer.py  pixa_synthesizer.py  polly_synthesizer.py  rime_synthesizer.py  rumik_synthesizer.py  sarvam_synthesizer.py  sixtydb_synthesizer.py  smallest_synthesizer.py  stream_synthesizer.py  synthesizer_pool.py  test_deepgram.py
bolna/transcriber/: __init__.py  assembly_transcriber.py  assemblyai_transcriber.py  azure_transcriber.py  base_transcriber.py  bodhi_transcriber.py  deepgram_transcriber.py  elevenlabs_transcriber.py  funasr_transcriber.py  gladia_transcriber.py  google_transcriber.py  lid_provider.py  openai_transcriber.py  pixa_transcriber.py  sarvam_transcriber.py  shunya_transcriber.py  smallest_transcriber.py  soniox_transcriber.py  (+2 more)
db/: models.py  pool.py
docs/: bring-your-own-trunk.md
examples/: agent.json  asterisk_websocket_example.py  paytm_exit_interview.json  simple_assistant.py  test_gemini_tts.py  text_only_assistant.py  zepto_recruitment_agent.json
extensions/: backchanneling.py  call_context.py  conversation_history.py  mcp_client.py  native_tools.py
local_setup/: README.md  calllogs.txt  docker-compose.yml  ngrok-config.yml  quickstart_client.py  quickstart_server.py  start.sh  test_basic_config.json  test_hindi_deepgram_config.json  test_minimal_config.json  test_sarvam_polly_config.json  test_simple_config.json  test_whisper_config.json  test_working_config.json
openai-status-monitor/: .env.example  README.md  example_usage.py  monitor.py  quick_start.sh  test_monitor.py
scripts/: prepare_telephony_ambient.py
services/: agent_service.py  call_service.py  campaign_service.py  template_service.py  tool_service.py  transfer_service.py  twilio_helpers.py
tests/: create_test_audio.py  test_camb_synthesizer.py  test_deepgram_run_id_tagging.py  test_elevenlabs_close_context_eos.py  test_elevenlabs_force_finalize.py  test_elevenlabs_scribe_lid.py  test_end_call_goodbye_audio_gate.py  test_openai_transcriber.py  test_rag_circuit_breaker.py  test_response_in_pipeline_guard.py  test_sarvam_lid.py  test_synthesizer_pool.py  test_welcome_pcm_upsampled.py
(+136 files in other folders)
