# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bolna"
version = "0.10.1"
readme = "README.md"
authors = [
    { name = "Prateek Sachan", email = "ps@prateeksachan.com" }
]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.10"

dependencies = [
    # Core async & web
    "aiobotocore==2.9.0",
    "aiofiles==23.2.1",
    "aiohttp>=3.9.2,<3.10.0",
    "fastapi==0.108.0",
    "uvicorn==0.22.0",
    "websockets==15.0.1",
    "httpx[http2]>=0.25.0",
    "requests>=2.31.0,<3",

    # Data & validation
    "pydantic==2.5.3",
    "python-dateutil==2.8.2",
    "python-dotenv==1.0.0",
    "pytz>=2024.1",
    "redis==5.0.1",
    "numpy==1.26.1",

    # LLM
    "litellm==1.65.0",
    "openai>=1.10.0",
    "tiktoken>=0.6.0",

    # Audio processing
    "pydub==0.25.1",
    "torchaudio==2.0.1",
    "scipy==1.11.4",
    "onnxruntime>=1.16.3",
]

[project.optional-dependencies]
dev = ["pip-tools", "pytest", "pytest-asyncio"]

# Provider-specific extras
azure = ["azure-cognitiveservices-speech==1.38.0"]
google = ["google-cloud-speech==2.25.0"]
groq = ["groq>=0.4.0"]
plivo = ["plivo==4.47.0"]
twilio = ["twilio==8.9.0"]

# Install all providers at once
all = [
    "bolna[azure]",
    "bolna[google]",
    "bolna[groq]",
    "bolna[plivo]",
    "bolna[twilio]",
]

[tool.setuptools]
package-dir = {"bolna" = "bolna"}

[tool.bumpver]
current_version = "0.10.1"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump bolna version {old_version} -> {new_version}"
tag_message = "bolna-{new_version}"
tag_scope = "default"
pre_commit_hook = ""
post_commit_hook = ""
commit = true
tag = true
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"',
]
"bolna/__init__.py" = [
    '^__version__ = "{version}"$',
]
